# botastico-python

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
botastico/: __init__.py  botastico.py  langchain.py
examples/: blurby.ipynb  langchain.ipynb
tests/: mock_server.py  test_langchain.py  test_langchain_e2e.py
